[workspace]
members = [
  "crates/btc-types",
  "crates/codec",
  "crates/codec-derive",
  "crates/codec-tests",
  "crates/codec-utils",
  "crates/crypto",
  "crates/db-macros",
  "crates/identifiers",
  "crates/l1proto/envelope-fmt",
  "crates/l1proto/txfmt",
  "crates/logging",
  "crates/metrics",
  "crates/merkle",
  "crates/merkle-store",
  "crates/msg-fmt",
  "crates/ol-logs",
  "crates/predicate",
  "crates/rkyv-utils",
  "crates/service",
  "crates/ssz-tests",
  "crates/tasks",
]

resolver = "3"

[workspace.dependencies]
strata-btc-types = { path = "crates/btc-types" }
strata-codec = { path = "crates/codec" }
strata-codec-derive = { path = "crates/codec-derive" }
strata-codec-tests = { path = "crates/codec-tests" }
strata-codec-utils = { path = "crates/codec-utils" }
strata-crypto = { path = "crates/crypto" }
strata-db-macros = { path = "crates/db-macros" }
strata-identifiers = { path = "crates/identifiers" }
strata-l1-txfmt = { path = "crates/l1proto/txfmt" }
strata-logging = { path = "crates/logging" }
strata-merkle = { path = "crates/merkle" }
strata-merkle-node-store = { path = "crates/merkle-store" }
strata-metrics = { path = "crates/metrics" }
strata-msg-fmt = { path = "crates/msg-fmt" }
strata-ol-logs = { path = "crates/ol-logs" }
strata-predicate = { path = "crates/predicate" }
strata-rkyv-utils = { path = "crates/rkyv-utils" }
strata-service = { path = "crates/service" }
strata-ssz-tests = { path = "crates/ssz-tests" }
strata-tasks = { path = "crates/tasks" }

# SSZ dependencies
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_codegen = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_primitives = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_types = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
tree_hash = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
tree_hash_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }

# External dependencies
anyhow = "1"
arbitrary = { version = "1.4", features = ["derive"] }
bincode = "1.3"
bitcoin = { version = "0.32.9" }
bitcoin-bosd = { version = "0.9.0", default-features = false }
borsh = { version = "1.5.0", features = ["derive"] }
const-hex = "1.18"
digest = "0.10"
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
int-enum = "1"
metrics = "0.24"
metrics-exporter-otel = "0.3"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = [
  "http-listener",
] }
metrics-util = { version = "0.20", default-features = false, features = [
  "layers",
] }
musig2 = "0.1"
num_enum = "0.7"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
paste = "1"
proptest = "1.8"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rkyv = "0.8"
rkyv_impl = "0.3"
schemars = { version = "1", features = ["derive"] }
secp256k1 = { version = "0.29.1", features = ["global-context", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
zeroize = { version = "1.8.1", features = ["derive"] }
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.3.0-rc.1" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.3.0-rc.1" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"

[profile.release]
opt-level = 3     # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "unwind"  # Graceful shutdown even on panic
strip = "symbols" # Strip symbols from binary
